fix headings on firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,7 +72,6 @@ p a:hover {
 
 #header h1{
   font-family: Georgia, serif;
-  font-size-adjust: 0.45;
   font-weight:100;
   font-size: 54px;
   letter-spacing: 4px;
@@ -134,7 +133,6 @@ h1 a:visited {
 
 .article h1, h2{
   font-family: 'CallunaRegular', georgia, 'lucida grande', helvetica, sans-serif;
-  font-size-adjust: 0.45;
   font-style:normal;
   font-weight:100;
 }
